# endian-writer-rs

./: CONTRIBUTING.MD  Cargo.toml  README-DEV.MD  README.MD  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: auto-changelog.yml  rust.yml
src/: alignment.rs  big_endian_reader.rs  big_endian_writer.rs  lib.rs  little_endian_reader.rs  little_endian_writer.rs  traits.rs  unroll_intrinsics.rs
